--- a/README.adoc
+++ b/README.adoc
@@ -1,7 +1,7 @@
 = Spring Boot Microservices + Pact-JVM
 Matt Stine <mstine@pivotal.io>
 
-This project contains a *very simple* demo of using http://martinfowler.com/articles/consumerDrivenContracts.html[consumer-driven] contracts to verify the interactions between microservices.
+This project contains a *very simple* demo of using http://martinfowler.com/articles/consumerDrivenContracts.html[consumer-driven contracts] to verify the interactions between microservices.
 It leverages http://projects.spring.io/spring-boot[Spring Boot] for both the provider and consumer services.
 
 Testing is achieved using the https://github.com/DiUS/pact-jvm[pact-jvm] project, which is a JVM port of the original https://github.com/realestate-com-au/pact[pact].
